feat:Mobil duyarlı hale getirildi.

--- a/src/tours.css
+++ b/src/tours.css
@@ -64,7 +64,7 @@ main {
  @media screen and (min-width: 768px) {
    .tours {
      display: grid;
-     grid-template-columns: 1fr 1fr 1fr;
+     grid-template-columns: 1fr 1fr ;
      gap: 2rem;
      align-items: start;
    }
@@ -75,7 +75,7 @@ main {
  
  @media screen and (min-width: 1100px) {
    .tours {
-     grid-template-columns: 1fr 1fr 1fr;
+     grid-template-columns: 1fr 1fr 1fr ;
    }
  }
  .single-tour {
